# team2

./: .clang-format  .clang-tidy  .coverage  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  component.md  conversations.json  integrate_email_ai.py  pull_request_template.md  pyproject.toml  spam_detection.py
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
ai_conversation_client/: README.md  __init__.py  cli.py  conversations.json  example.py  pyproject.toml  pytest.ini  requirements.txt
ai_conversation_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai_conversation_client/providers/: __init__.py  openai.py
ai_conversation_client/tests/: test_client.py
ai_conversation_client/tests/e2e/: test_email_ai_e2e.py
ai_conversation_client/tests/integration/: test_email_ai_integration.py
src/: calculator.cpp  calculator.h  calculator.hpp  logger.cpp  logger.h  logger.hpp  notifier.cpp  notifier.h  notifier.hpp
src/calculator/: calculator.cpp  test_calculator.cpp
src/calculator/include/: calculator.hpp
src/calculator/test/: test_calculator.cpp
src/logger/: logger.cpp  test_logger.cpp
src/logger/test/: test_logger.cpp
src/notifier/: notifier.cpp  test_notifier.cpp
src/notifier/include/: notifier.hpp
src/notifier/test/: test_notifier.cpp
tests/: test_calculator.cpp  test_logger.cpp  test_notifier.cpp
tests/e2e/: test_e2e.cpp
tests/integration/: test_integration.cpp
tests/unit/: test_calculator.cpp  test_logger.cpp  test_notifier.cpp
